--- a/app/src/styles/fonts.css
+++ b/app/src/styles/fonts.css
@@ -1,47 +1,15 @@
 @font-face {
-  font-family: "Inter";
+  font-family: 'Inter';
   font-style: normal;
-  font-weight: 300;
+  font-weight: 100 900;
   font-display: swap;
-  src: url("../fonts/inter/Inter_18pt-Light.ttf") format("truetype");
+  src: url("../fonts/InterVariable.woff2") format("woff2-variations");
 }
 
 @font-face {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: url("../fonts/inter/Inter_18pt-Regular.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Inter";
+  font-family: 'Inter';
   font-style: italic;
-  font-weight: 400;
+  font-weight: 100 900;
   font-display: swap;
-  src: url("../fonts/inter/Inter_18pt-Italic.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-display: swap;
-  src: url("../fonts/inter/Inter_18pt-Medium.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 600;
-  font-display: swap;
-  src: url("../fonts/inter/Inter_18pt-SemiBold.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 700;
-  font-display: swap;
-  src: url("../fonts/inter/Inter_18pt-Bold.ttf") format("truetype");
+  src: url("../fonts/InterVariable-Italic.woff2") format("woff2-variations");
 }
